# dust

./: .gitignore  .gitmodules  Cargo.toml  DESIGN.md  FEATURES.md  README.md  build.rs  build.sh  grammar.js  perf.data.old  protonvpn-stable-release-1.0.3-1.noarch.rpm  rust-toolchain.toml  test.ds  test_parse.sh  wl-copy
dust-cli/: Cargo.toml
dust-cli/src/: cli.rs  compile.rs  main.rs  parse.rs  run.rs
dust-lang/: Cargo.toml
dust-lang/benches/: addictive_addition.rs  addictive_calling.rs  addictive_division.rs  addictive_multiplication.rs  addictive_subtraction.rs  compile.rs  fibonacci.rs  parse.rs  threads.rs  tokenize.rs  validate_utf8.rs
dust-lang/examples/: interpreter_async.rs  pretty_errors.rs
dust-lang/src/: abstract_tree.rs  analyzer.rs  built_in_function.rs  built_in_functions.rs  bytecode.rs  chunk.rs  compiler.rs  constant_table.rs  constructor.rs  context.rs  core_library.rs  disassembler.rs  dust_crate.rs  dust_error.rs  error.rs  evaluation.rs  formatter.rs  function.rs  identifier.rs  identifier_stack.rs  instruction.rs  interpreter.rs  jit.rs  lex.rs  lexer.rs  lib.rs  module.rs  native_function.rs  operation.rs  optimize.rs  optimizer.rs  panic.rs  parse.rs  parser.rs  position.rs  program.rs  project.rs  prototype.rs  resolver.rs  run.rs  (+8 more)
dust-lang/src/_tests/: mod.rs  values.rs
dust-lang/src/abstract_tree/: as.rs  assignment.rs  async_block.rs  block.rs  built_in_function.rs  built_in_function_call.rs  enum_declaration.rs  expression.rs  for.rs  function_call.rs  identifier.rs  if_else.rs  list_index.rs  logic.rs  loop.rs  map_index.rs  math.rs  mod.rs  statement.rs  structure_definition.rs  type.rs  type_alias.rs  type_assignment.rs  type_constructor.rs  use.rs  value_expression.rs  value_node.rs  while.rs
dust-lang/src/ast/: expression.rs  mod.rs  statement.rs
dust-lang/src/chunk/: constant_table.rs  debug_chunk.rs  disassembler.rs  full_chunk.rs  local.rs  mod.rs  scope.rs  stripped_chunk.rs  tui_disassembler.rs
dust-lang/src/compiler/: abstract_constant.rs  binder.rs  chunk_compiler.rs  code_generator.rs  compile_error.rs  compile_mode.rs  context.rs  error.rs  expression.rs  fold_constants.rs  global.rs  item.rs  local.rs  mod.rs  module.rs  optimize.rs  parse_rule.rs  path.rs  path_resolver.rs  prototype_compiler.rs  prototype_store.rs  scope.rs  standard_library.rs  type_checks.rs  type_resolver.rs
dust-lang/src/disassembler/: mod.rs
dust-lang/src/instruction/: add.rs  add_byte.rs  add_char.rs  add_char_str.rs  add_float.rs  add_int.rs  add_str.rs  add_str_char.rs  address.rs  call.rs  call_native.rs  close.rs  define_local.rs  destination.rs  divide.rs  divide_byte.rs  divide_float.rs  divide_int.rs  drop.rs  equal.rs  equal_bool.rs  equal_byte.rs  equal_char.rs  equal_char_str.rs  equal_float.rs  equal_int.rs  equal_str.rs  equal_str_char.rs  get_list.rs  get_local.rs  jump.rs  less.rs  less_byte.rs  less_char.rs  less_equal.rs  less_equal_byte.rs  less_equal_char.rs  less_equal_float.rs  less_equal_int.rs  less_equal_str.rs  (+46 more)
dust-lang/src/jit/: jit_error.rs  mod.rs
dust-lang/src/jit_vm/: call_frame.rs  call_stack.rs  cell.rs  error.rs  mod.rs  object.rs  object_pool.rs  register.rs  run_status.rs  thread.rs  thread_pool.rs
dust-lang/src/lexer/: error.rs  lex_rule.rs  mod.rs  tests.rs  validate_utf8.rs
dust-lang/src/native_function/: assert.rs  assertion.rs  convert.rs  io.rs  logic.rs  mod.rs  random.rs  string.rs  thread.rs
dust-lang/src/panic_vm/: call_frame.rs  cell.rs  macros.rs  memory.rs  mod.rs  runners.rs  thread.rs
dust-lang/src/parser/: error.rs  mod.rs  parse_rule.rs  tests.rs
dust-lang/src/prototype/: disassembler.rs  mod.rs
dust-lang/src/resolver/: mod.rs  scope.rs
dust-lang/src/risky_vm/: call_frame.rs  memory.rs  mod.rs  runner.rs  runners.rs  thread.rs
dust-lang/src/syntax/: mod.rs  syntax_node.rs  syntax_tree.rs
dust-lang/src/syntax_tree/: local.rs  mod.rs  scope.rs  syntax_node.rs
dust-lang/src/tests/: block_cases.rs  constant_cases.rs  functions.rs  if_cases.rs  if_else_cases.rs  list_cases.rs  local_cases.rs  loop_cases.rs  mod.rs  not.rs  values.rs
dust-lang/src/value/: abstract_list.rs  abstract_value.rs  concrete_value.rs  dust_range.rs  dust_string.rs  function.rs  list.rs  mod.rs  range.rs  range_value.rs
dust-lang/src/vm/: action.rs  call_frame.rs  call_stack.rs  cell.rs  error.rs  function_call.rs  macros.rs  memory.rs  mod.rs  object.rs  object_pool.rs  pointer.rs  record.rs  register.rs  register_table.rs  run_action.rs  runner.rs  runners.rs  runtime_error.rs  stack.rs  thread.rs
dust-lang/tests/: add.rs  assignment_errors.rs  basic.rs  comparison.rs  control_flow.rs  divide.rs  enums.rs  expressions.rs  functions.rs  lists.rs  logic.rs  logic_and.rs  logic_and_and.rs  logic_booleans.rs  logic_or.rs  logic_variables.rs  loops.rs  math.rs  math_add.rs  math_add_assign.rs  math_add_errors.rs  math_add_type_errors.rs  math_divide.rs  math_divide_assign.rs  math_divide_errors.rs  math_modulo.rs  math_modulo_errors.rs  math_multiply.rs  math_multiply_assign.rs  math_multiply_errors.rs  math_subtract.rs  math_subtract_errors.rs  multiply.rs  multiply_assign.rs  native_functions.rs  negation.rs  not.rs  operations.rs  parse_errors.rs  scopes.rs  (+9 more)
dust-lang/tests/comparison/: equal.rs  greater.rs  greater_equal.rs  less.rs  (+2 more)
dust-shell/: Cargo.toml
dust-shell/src/: cli.rs  error.rs  main.rs
tree-sitter-dust/: .prettierrc  Cargo.toml  grammar.js  highlights.scm  package-lock.json  package.json  test_output.md
tree-sitter-dust/corpus/: as.txt  assert.txt  assignment.txt  async.txt  blocks.txt  built_in_function.txt  commands.txt  comments.txt  control_flow.txt  enums.txt  examples.txt  filter.txt  find.txt  for.txt  functions.txt  futures.txt  identifiers.txt  if_else.txt  index.txt  lists.txt  logic.txt  maps.txt  match.txt  operators.txt  pipe.txt  range.txt  reduce.txt  remove.txt  simple_values.txt  statements.txt  structure.txt  tables.txt  tool.txt  transform.txt  types.txt  values.txt  while.txt  yield.txt
tree-sitter-dust/src/: grammar.json  node-types.json  parser.c
(+533 files in other folders)
