[workspace]
members = ["dust-lang", "dust-cli"]
default-members = ["dust-lang", "dust-cli"]
resolver = "2"

[workspace.package]
authors = ["Jeff Anderson"]
edition = "2024"
license = "GPL-3.0"
readme = "README.md"
repository = "https://git.jeffa.io/jeff/dust.git"
version = "0.5.0"

[profile.dev]
opt-level = 1
[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = 3
panic = "abort"
strip = true

[profile.perf]
inherits = "release"
strip = false
