[workspace]
members = ["dust-lang", "dust-cli"]
default-members = ["dust-lang", "dust-cli"]
resolver = "2"

[workspace.package]
authors = ["Jeff Anderson"]
license = "GPL-3.0"
readme = "README.md"
repository = "https://git.jeffa.io/jeff/dust.git"
version = "0.5.0"
edition = "2024"

[profile.dev]
opt-level = 1
[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = 3
panic = "abort"
strip = true
target-cpu = "native"

[profile.perf]
inherits = "release"
strip = false
