[workspace]
members = ["dust-lang", "dust-cli"]
default-members = ["dust-lang", "dust-cli"]
resolver = "2"

[workspace.package]
authors = ["Jeff Anderson"]
license = "GPL-3.0"
readme = "README.md"
repository = "https://git.jeffa.io/jeff/dust.git"
version = "0.5.0"
edition = "2024"

[profile.dev]
opt-level = 1
[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 3
debug = false
split-debuginfo = "off"
strip = "symbols"
debug-assertions = false
overflow-checks = false
lto = "fat"
panic = "unwind"
incremental = true
codegen-units = 1
rpath = false

[profile.perf]
inherits = "release"
strip = false
