[package]
name = "dust-cli"
description = "Command line interface for the Dust programming language"
authors = ["Jeff Anderson"]
edition.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[[bin]]
name = "dust"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.29", features = [
    "cargo",
    "color",
    "derive",
    "help",
    "wrap_help",
] }
colored = "3.0.0"
dust-lang = { path = "../dust-lang" }
postcard = { version = "1.1.1", default-features = false }
ron = "0.10.1"
serde_json = "1.0.138"
serde_yaml = "0.9.34"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "time"] }
