[package]
name = "dust-cli"
description = "Command line interface for the Dust programming language"
authors = ["Jeff Anderson"]
edition.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[[bin]]
name = "dust"
path = "src/main.rs"

[features]
default = ["global-mimalloc"]
global-mimalloc = ["dust-lang/global-mimalloc"]

[dependencies]
clap = { version = "4.5.47", features = [
    "cargo",
    "color",
    "derive",
    "help",
    "wrap_help",
] }
colored = "3.0.0"
dust-lang = { path = "../dust-lang" }
memmap2 = "0.9.8"
toml = "0.9.5"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "time"] }
