[package]
name = "dust-lang"
description = "Dust programming language library"
authors.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[features]
global-mimalloc = []

[dependencies]
annotate-snippets = "0.12.3"
colored = "3.0.0"
rand = "0.9.2"
serde = { version = "1.0.219", features = ["derive", "rc"] }
serde_json = "1.0.143"
getrandom = "0.3" # Indirect dependency, for WASM builds
tracing = "0.1.41"
crossbeam-channel = "0.5.15"
cranelift = "0.123"
cranelift-jit = "0.123"
cranelift-module = "0.123"
mimalloc = "0.1.48"
ratatui = "0.29.0"
lexical-core = { version = "1.0.5", features = ["format"] }
smallvec = { version = "1.15.1" }
rustc-hash = "2.1.1"
indexmap = { version = "2.11.0", features = ["serde"] }
bumpalo = { version = "3.19.0", features = ["boxed", "collections"] }
termtree = "0.5.1"
clap = { version = "4.5.47", features = ["env"] }
memmap2 = "0.9.8"
unicode-ident = "1.0.12"

[dev-dependencies]
criterion = { version = "0.7", features = ["html_reports"] }

[[bench]]
name = "tokenize"
harness = false

[[bench]]
name = "parse"
harness = false

[[bench]]
name = "compile"
harness = false

[[bench]]
name = "addictive_addition"
harness = false

[[bench]]
name = "addictive_calling"
harness = false

[[bench]]
name = "fibonacci"
harness = false

# [[bench]]
# name = "threads"
# harness = false
